@@ -236,6 +236,19 @@ EOF
   @Override
   def setupToolVersion() {
     gradle("--version") // ensure wrapper has been downloaded
+
+    try {
+      def statusCode = steps.sh script: 'grep -F "JavaLanguageVersion.of(17)" build.gradle', returnStatus: true
+      if (statusCode == 0) {
+        steps.env.JAVA_HOME = "/usr/lib/jvm/java-17-openjdk-amd64"
+        steps.env.PATH = "${steps.env.JAVA_HOME}/bin:${steps.env.PATH}"
+        // Workaround jacocoTestReport issue https://github.com/gradle/gradle/issues/18508#issuecomment-1049998305
+        steps.env.GRADLE_OPTS = "--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED"
+      }
+    } catch(err) {
+      steps.echo "Failed to detect java version, ensure the root project has the correct Java requirements set"
+    }
+
     localSteps.sh "java -version"
   }
 
